# syncstore

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
scripts/: cf-add-tunnel.md  ubuntu-install-cf-tunnel.sh
ss-utils/: Cargo.toml
ss-utils/src/: logs.rs
syncstore/: Cargo.toml  README.md
syncstore/docs/: vibe.md
syncstore/examples/: demo.rs  try_meta.rs
syncstore/src/: config.rs  error.rs  lib.rs  store.rs  types.rs
syncstore/src/backend/: mod.rs  sqlite.rs
syncstore/src/components/: acl_manager.rs  data_manager.rs  mod.rs  user_manager.rs
syncstore/src/router/: acl.rs  admin.rs  auth.rs  chunk_data_wrapper.rs  data.rs  fs.rs  health.rs  hpke_wrapper.rs  mod.rs  user.rs
syncstore/src/utils/: constant.rs  hpke.rs  jwt.rs  mod.rs
syncstore/tests/integrated/: acl_management.rs  basic_crud.rs  main.rs  mock.rs  user_management.rs
xss/: Cargo.toml  config.toml
xss/scripts/: create_fs.sh  mock_test_data.sh  new_user.sh  update_server.sh
xss/src/: config.rs  main.rs
