[workspace]
resolver = "3"
members = ["syncstore"]

[workspace.package]
authors = ["eluvk.dev@gmail.com"]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
anyhow = "1.0.99"
salvo = "0.83.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
