[workspace]
resolver = "3"
members = ["syncstore", "ss-utils", "xss"]

[workspace.package]
authors = ["eluvk.dev@gmail.com"]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
jsonschema = "0.33.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.31.0", features = ["bundled"] }
# rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
salvo = { version = "0.84.2", features = ["affix-state", "jwt-auth", "oapi"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
# tracing-appender = "0.2.3"
# tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
uuid = { version = "1.18.1", features = ["v4"] }
