[workspace]
resolver = "3"
members = ["syncstore", "ss-utils", "xss"]

[workspace.package]
authors = ["eluvk.dev@gmail.com"]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
base64-serde = "0.8.0"
chrono = { version = "0.4.42", features = ["serde"] }
hpke = "0.13"
itertools = "0.14.0"
jsonschema = "0.40.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.32.0", features = ["bundled"] }
rand = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
salvo = { version = "0.89.0", features = [
    "affix-state",
    "jwt-auth",
    "logging",
    "oapi",
    "serve-static",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.18"
toml = "0.9.11"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
# tracing-appender = "0.2.3"
# tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
uuid = { version = "1.18.1", features = ["v4"] }
