[package]
name = "syncstore"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# rusqlite = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
jsonschema = { workspace = true }
jsonwebtoken = "9.3.1"
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
