[package]
name = "syncstore"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# rusqlite = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
jsonschema = { workspace = true }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
